--- a/404.html
+++ b/404.html
@@ -1,14 +1,9 @@
 ---
 permalink: /404.html
-layout: page
+layout: containerless-page
 ---
 
 <style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
   h1 {
     margin: 30px 0;
     font-size: 4em;
@@ -17,7 +12,7 @@ layout: page
   }
 </style>
 
-<div class="container">
+<div>
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
